--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,11 @@ body {
     background-color: #141414;
 }
 
+.container-xxl {
+    max-width: 1360px;
+    padding: 0.75rem;
+}
+
 .border-radius {
     border-radius: 32px;
 }
@@ -98,7 +103,7 @@ body {
     padding-bottom: 45px;
 }
 
-@media (max-width: 564.98px) {
+@media (max-width: 575.98px) {
     .navbar .container-xxl {
         padding-top: 5px;
         padding-bottom: 15px;
@@ -184,4 +189,113 @@ body {
     font-size: 1.250vw;
     font-weight: 600;
     line-height: 1.500vw;
+}
+
+/*** Flip Cards ***/
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front-side,
+.flip-card-back-side {
+    /* position: absolute; */
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+}
+
+/* Style the back side */
+.flip-card-back-side {
+    transform: rotateY(180deg) translate(50%, 50%);
+    position: absolute;
+    left: 50%;
+    top: -50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/*** Services ***/
+
+#services .flip-card .flip-card-front-side {
+    height: 243px;
+}
+
+#services .flip-card .flip-card-front-side .flip-card-container {
+    background-size: 245px;
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    height: 100%;
+    width: 100%;
+    padding: 30px;
+}
+
+#services .flip-card .flip-card-front-side .flip-card-container:is(.is-new) {
+    display: grid;
+    grid-template-columns: 1fr max-content;
+    grid-template-rows: 1fr max-content;
+}
+
+#services .flip-card .flip-card-front-side .flip-card-container:not(.is-new) {
+    display: grid;
+    grid-template-rows: 1fr max-content;
+}
+
+#services .flip-card .flip-card-back-side .flip-card-container {
+    padding: 40px;
+}
+
+#services .flip-card .flip-card-inner {
+    background-color: #1E1E1E;
+}
+
+#services .flip-card .flip-card-inner:is(:hover) {
+    background-color: #FF001D;
+}
+
+#services .flip-card .flip-card-inner * {
+    color: #fff!important;
+    margin: 0;
+    font-weight: 500;
+}
+
+#services .flip-card-title,
+#services .flip-card-price {
+    font-size: 24px;
+    text-shadow: 0 0 4px #000000;
+}
+
+#services .flip-card-new {
+    height: max-content;
+    width: max-content;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 17px;
+    padding: 4px 8px;
+    background-color: #FF001D;
+    border-radius: 20px;
+    text-transform: uppercase;
+}
+
+@media only screen and (max-width: 991.98px) {
+    #services .flip-card .flip-card-front-side .flip-card-container {
+        padding: 20px;
+    }
+    
+    #services .flip-card .flip-card-back-side .flip-card-container {
+        padding: 20px;
+    }
 }
