--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,12 @@ body {
     z-index: 9999;
 }
 
+.navbar:is(.navbar-sticky) {
+    position: fixed;
+    background-color: #1E1E1E;
+    transition: .5s;
+}
+
 .navbar-nav {
     gap: 18px;
 }
@@ -152,6 +158,11 @@ body {
     border-bottom: 1px solid #282828;
     padding-top: 45px;
     padding-bottom: 45px;
+}
+
+.navbar:is(.navbar-sticky) .container-xxl {
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 @media (max-width: 575.98px) {
