Se modifico el espaciado del formulario y el min height del iframe se llevo al archivo de estilos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -660,6 +660,12 @@ body {
     }
 }
 
+/*** Contact ***/
+#contact .map iframe {
+    min-height: 300px;
+}
+
+/*** Footer ***/
 #footer *:not(.btn) {
     color: #fff;
 }
