Estilos inline llevados a la hoja de estilos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -576,6 +576,10 @@ body {
     height: 225px;
 }
 
+#about-process .process-image {
+    width: max-content;
+}
+
 #about-process .process-title {
     color: #000;
     font-size: 24px;
