--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,8 @@ body {
     height: 50px;
     padding: 0px!important;
     font-size: 20px!important;
-    bottom: 12px!important;
+    right: 15px!important;
+    bottom: 85px!important;
     border-radius: 10px!important;
     box-shadow: 0px 0px 8px 1px #0000002b;
 }
@@ -115,8 +116,8 @@ body {
         height: 40px;
         border-radius: 7px!important;
         padding: 0px!important;
-        right: 10px!important;
-        bottom: 10px!important;
+        right: 20px!important;
+        bottom: 85px!important;
     }
 }
 
@@ -738,4 +739,25 @@ body {
     border-right: 10px solid transparent;
     border-bottom: 10px solid white;
     transform: translate(-50%, -10px);
+}
+
+/*** WhatsApp Widget ***/
+.whatsapp-widget {
+    position: fixed;
+    right: 10px;
+    bottom: 15px;
+}
+
+.whatsapp-widget a {
+    background-color: #25D366;
+    color: #fff;
+    width: 61px;
+    height: 61px;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 44px;
+    text-decoration: none;
+    transition: .3s;
 }
